--- a/testing/.godot/editor/editor_layout.cfg
+++ b/testing/.godot/editor/editor_layout.cfg
@@ -2,14 +2,14 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=360
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_selected_paths=PackedStringArray("res://main.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://art/")
 dock_node_current_tab=0
 dock_history_include_scene=true
