--- a/testing/.godot/editor/project_metadata.cfg
+++ b/testing/.godot/editor/project_metadata.cfg
@@ -31,3 +31,8 @@ create_built_in_script=false
 
 picker_shape=3
 recent_presets=PackedColorArray(1, 0.11764706, 1, 1, 0.5719834, 0.004580074, 0.53677726, 1, 0.5657264, 0.020020371, 0.545831, 1, 0.86576545, 0.04988232, 0.8366319, 1)
+
+[export_options]
+
+default_filename="Dodge the Creeps"
+export_debug=true
